<resources>
    <string name="app_name">Project3 zhangba5</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="dummy4">dummy</string>
    <string name="dummy2">dummy</string>
    <string name="dummy3">dummy</string>
    <string name="dummy1">dummy</string>
    <string name="provider">Provider</string>
    <string name="newlocation">newLocation</string>
    <string name="dummy5">dummy</string>
    <string name="New">New</string>
    <string name="eb2250">eb2250</string>
    <string name="sparty">sparty</string>
    <string name="home">home</string>
    <string name="exception">Failed to communicate with geolocation services</string>
    <string name="couldnotfind">Unable to locate address</string>
    <string name="set_favorite">Set Favorite</string>
    <string name="open_map">Open Map</string>
    <string name="transportation_mode">Transportation Mode</string>
</resources>
