<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:layout_gravity="center_horizontal">

    <TextView
        android:id="@+id/textLatitude"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textLableLongitude"
        android:layout_alignStart="@+id/textProvider"
        android:text="@string/dummy2" />

    <TextView
        android:id="@+id/textLabelLatitude"
        android:layout_alignParentTop="true"
        android:layout_toStartOf="@+id/textLatitude"
        android:text="@string/latitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="21dp"
        android:layout_marginEnd="20dp" />

    <TextView
        android:id="@+id/textLableLongitude"
        android:layout_below="@+id/textLabelLatitude"
        android:layout_alignEnd="@+id/textLabelLatitude"
        android:text="@string/longitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/textTo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textLongitude"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:gravity="center_horizontal"
        android:text="@string/dummy4"
        android:textIsSelectable="false"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/textLongitude"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textLatitude"
        android:layout_toEndOf="@+id/textLabelLatitude"
        android:text="@string/dummy3" />

    <TextView
        android:id="@+id/textProvider"
        android:text="@string/dummy1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textLatitude"
        android:layout_alignStart="@+id/textNewLocLable" />

    <TextView
        android:id="@+id/textLableProvider"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textProvider"
        android:layout_alignBottom="@+id/textProvider"
        android:layout_alignEnd="@+id/textLabelLatitude"
        android:text="@string/provider" />

    <TextView
        android:id="@+id/textNewLocLable"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Spinner"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/newlocation"
        android:textSize="15sp"
        android:textStyle="normal|italic" />


    <TextView
        android:id="@+id/textDistance"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textTo"
        android:layout_alignStart="@+id/textTo"
        android:layout_centerInParent="true"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/dummy5"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/editLocation"
        android:layout_width="292dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/textNewLocLable"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:inputType="text" />

    <Button
        android:id="@+id/NewBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/editLocation"
        android:layout_alignEnd="@id/editLocation"
        android:text="@string/New"
        android:onClick="onNew" />

    <Button
        android:id="@+id/Favorite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toStartOf="@id/NewBtn"
        android:layout_below="@id/editLocation"
        android:layout_marginEnd="30dp"
        android:text="@string/set_favorite"
        android:onClick="onFavorite"/>

    <TextView
        android:id="@+id/Mode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/transportation_mode"
        android:layout_below="@id/textDistance"
        android:gravity="center"
        android:textSize="20sp"/>
    <Spinner
        android:id="@+id/Spinner"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/Mode"
        android:entries="@array/Mode"/>

    <Button
        android:id="@+id/Map"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/Favorite"
        android:layout_toStartOf="@id/NewBtn"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="10dp"
        android:text="@string/route"
        android:onClick="onRoute"/>



</RelativeLayout>